# rage2

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
.github/workflows/: python-release.yml
docker/api/: Dockerfile
docker/core/: Dockerfile
notebooks/01-retriever/: 01-retriever.ipynb
notebooks/02-loaders/: 01-docx-loader.ipynb  01-word-loader.ipynb  02-epub-loader.ipynb  03-pdf-loader.ipynb  lala.html
notebooks/03-embeddings/: 01-ionos-embeddings.ipynb
notebooks/04-converters/: 01-doc2docx.ipynb
rage/conf/llm_agents/: table-extractor.yml
rage/llm_agents/: __init__.py  table_extractor.py
rage/loaders/: __init__.py  docx_loader.py  epub_loader.py  markdown_loader.py  pdf_loader.py  pdf_markdown_loader.py
rage/meta/data_models/: __init__.py
rage/meta/interfaces/: text_loader.py  text_splitter.py
rage/retriever/: __init__.py  retriever.py
rage/splitters/: __init__.py  document_splitter.py  markdown_splitter.py  simple_text_splitter.py  title_splitter.py  title_text_splitter.py  token_splitter.py  word_splitter.py  word_text_splitter.py
rage/utils/: cache.py  embeddings.py  text.py
rage/vectore_store/: __init__.py  vectore_store.py
src/rage/config/: config.py
src/rage/converters/: __init__.py  doc2docx.py
src/rage/embeddings/: __init__.py  ionos_embeddings.py
src/rage/loaders/: __init__.py  docx_loader.py  markdown_loader.py  pdf_loader.py  pdf_markdown_loader.py
src/rage/utils/: embeddings.py
(+7 files in other folders)
